@@ -1,3 +1,7 @@
+2009-12-09
+    * per channel state for banks, instruments, controllers
+    * drums instrument  
+
 2009-12-08
     * drums channel, new setting in preferences dialog
 
